--- a/gnocchi/tests/functional/gabbits/aggregation.yaml
+++ b/gnocchi/tests/functional/gabbits/aggregation.yaml
@@ -235,10 +235,43 @@ tests:
           - ['2015-03-06T14:33:57+00:00', 1.0, 23.1]
           - ['2015-03-06T14:34:12+00:00', 1.0, 7.0]
 
+    - name: get measure aggregates by granularity from aggregates API
+      POST: /v1/aggregates/search-and-fetch?granularity=1
+      data:
+        resource_type: generic
+        search: {}
+        operations: '(aggregate mean (metric agg_meter mean))'
+      response_json_paths:
+        $.aggregated:
+          - ['2015-03-06T14:33:57+00:00', 1.0, 23.1]
+          - ['2015-03-06T14:34:12+00:00', 1.0, 7.0]
+
     - name: get measure aggregates by granularity from resources and resample
       POST: /v1/aggregation/resource/generic/metric/agg_meter?granularity=1&resample=60
       response_json_paths:
         $:
+          - ['2015-03-06T14:33:00+00:00', 60.0, 23.1]
+          - ['2015-03-06T14:34:00+00:00', 60.0, 7.0]
+
+    - name: get measure aggregates by granularity from aggregates API and resample
+      POST: /v1/aggregates/search-and-fetch?granularity=1
+      data:
+        resource_type: generic
+        search: {}
+        operations: '(aggregate mean (resample mean 60 (metric agg_meter mean)))'
+      response_json_paths:
+        $.aggregated:
+          - ['2015-03-06T14:33:00+00:00', 60.0, 23.1]
+          - ['2015-03-06T14:34:00+00:00', 60.0, 7.0]
+
+    - name: get measure aggregates by granularity from resources and operations
+      POST: /v1/aggregates/search-and-fetch?granularity=1
+      data:
+        resource_type: generic
+        search: {}
+        operations: '(aggregate mean (resample mean 60 (metric agg_meter mean)))'
+      response_json_paths:
+        $.aggregated:
           - ['2015-03-06T14:33:00+00:00', 60.0, 23.1]
           - ['2015-03-06T14:34:00+00:00', 60.0, 7.0]
 
@@ -262,6 +295,20 @@ tests:
           - ['2015-03-06T14:30:00+00:00', 300.0, 15.05]
           - ['2015-03-06T14:33:57+00:00', 1.0, 23.1]
 
+    - name: get measure aggregates by granularity with timestamps from aggregates API
+      POST: /v1/aggregates/search-and-fetch?start=2015-03-06T15:33:57%2B01:00&stop=2015-03-06T15:34:00%2B01:00
+      data:
+        resource_type: generic
+        search: {}
+        operations: '(aggregate mean (metric agg_meter mean))'
+      poll:
+          count: 10
+          delay: 1
+      response_json_paths:
+        $.aggregated:
+          - ['2015-03-06T14:30:00+00:00', 300.0, 15.05]
+          - ['2015-03-06T14:33:57+00:00', 1.0, 23.1]
+
     - name: get measure aggregates by granularity from resources and reaggregate
       POST: /v1/aggregation/resource/generic/metric/agg_meter?granularity=1&reaggregation=min
       poll:
@@ -280,6 +327,17 @@ tests:
           - ['2015-03-06T14:34:12+00:00', 1.0, 7.0]
           - ['2015-03-06T14:35:12+00:00', 1.0, 2.5]
 
+    - name: get measure aggregates from aggregates API with fill zero
+      POST: /v1/aggregates/search-and-fetch?granularity=1&fill=0
+      data:
+        resource_type: generic
+        search: {}
+        operations: '(aggregate mean (metric agg_meter mean))'
+      response_json_paths:
+        $.aggregated:
+          - ['2015-03-06T14:33:57+00:00', 1.0, 23.1]
+          - ['2015-03-06T14:34:12+00:00', 1.0, 7.0]
+          - ['2015-03-06T14:35:12+00:00', 1.0, 2.5]
 
 # Some negative tests
 
