--- a/doc/source/rest.yaml
+++ b/doc/source/rest.yaml
@@ -775,7 +775,7 @@
 
 - name: get-aggregates-by-metric-ids
   request: |
-    POST /v1/aggregates/fetch?start=2014-10-06T14:34&stop=2017-10-06T14:34 HTTP/1.1
+    POST /v1/aggregates?start=2014-10-06T14:34&stop=2017-10-06T14:34 HTTP/1.1
     Content-Type: application/json
 
     {
@@ -792,7 +792,7 @@
 
 - name: get-aggregates-between-metrics
   request: |
-    POST /v1/aggregates/fetch?start=2014-10-06T14:34&stop=2017-10-06T14:34 HTTP/1.1
+    POST /v1/aggregates?start=2014-10-06T14:34&stop=2017-10-06T14:34 HTTP/1.1
     Content-Type: application/json
 
     {
@@ -809,11 +809,33 @@
 
 - name: get-aggregates-by-metric-ids-fill
   request: |
-    POST /v1/aggregates/fetch?fill=0&granularity=1 HTTP/1.1
+    POST /v1/aggregates?fill=0&granularity=1 HTTP/1.1
     Content-Type: application/json
 
     {
       "operations": "(* (aggregate mean (metric {{ scenarios['create-resource-instance-with-metrics']['response'].json['metrics']['cpu.util'] }} mean)) 4)"
+    }
+
+- name: get-aggregates-by-attributes-lookup
+  request: |
+    POST /v1/aggregates?start=2014-10-06T14:34 HTTP/1.1
+    Content-Type: application/json
+
+    {
+      "resource_type": "instance",
+      "search": {"=": {"server_group": "my_autoscaling_group"}},
+      "operations": ["*", ["aggregate", "mean", ["metric", "cpu.util", "mean"]], 4]
+    }
+
+- name: get-aggregates-by-attributes-lookup-groupby
+  request: |
+    POST /v1/aggregates?start=2014-10-06T14:34&groupby=host&groupby=flavor_id HTTP/1.1
+    Content-Type: application/json
+
+    {
+      "resource_type": "instance",
+      "search": "server_group='my_autoscaling_group'",
+      "operations": "(* (aggregate mean (metric cpu.util mean)) 4)"
     }
 
 - name: get-capabilities
