--- a/setup.cfg
+++ b/setup.cfg
@@ -60,12 +60,11 @@ test =
     coverage>=3.6
     fixtures
     mock
-    python-subunit>=0.0.18
-    os-testr
-    testrepository
-    testscenarios
     testresources>=0.2.4 # Apache-2.0/BSD
     testtools>=0.9.38
+    pytest
+    pytest-cov
+    pytest-xdist>=1.19.0
     WebTest>=2.0.16
     doc8
     keystonemiddleware>=4.0.0
