--- a/tox.ini
+++ b/tox.ini
@@ -127,23 +127,9 @@ whitelist_externals = bash
 commands = flake8
            bashate -v devstack/plugin.sh
 
-[testenv:py27-gate]
-setenv = GNOCCHI_TEST_PATH=gnocchi/tests/functional_live
-         GABBI_LIVE=1
-passenv = {[testenv]passenv} GNOCCHI_SERVICE* GNOCCHI_AUTHORIZATION
-sitepackages = True
-basepython = python2.7
-commands = {toxinidir}/tools/pretty_tox.sh '{posargs}'
-
-# This target provides a shortcut to running just the gabbi tests.
-[testenv:py27-gabbi]
-deps = .[test,postgresql,file]
-setenv = GNOCCHI_TEST_PATH=gnocchi/tests/functional
-basepython = python2.7
-commands = pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- {toxinidir}/tools/pretty_tox.sh '{posargs}'
-
-[testenv:py27-cover]
-commands = pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python setup.py testr --coverage --testr-args="{posargs}"
+[testenv:cover]
+deps = {[testenv:docs]deps}
+commands = pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- pytest --cov=gnocchi {posargs:gnocchi/tests}
 
 [testenv:venv]
 # This is used by the doc job on the gate
@@ -175,6 +161,10 @@ deps = {[testenv:docs]deps}
        sphinxcontrib-versioning
 # fox <= 4.1 doc
        pandas
+       python-subunit>=0.0.18
+       os-testr
+       testrepository
+       testscenarios
 # for 3.x doc
        oslotest
        oslosphinx
@@ -186,3 +176,8 @@ commands =
 
 [doc8]
 ignore-path = doc/source/rest.rst,doc/source/comparison-table.rst
+
+[pytest]
+# NOTE(sileht): loadscope is needed to ensure gabbi tests are ran into the same worker
+addopts = --verbose --dist=loadscope --numprocesses=auto
+norecursedirs = .tox
